--- a/FriendZone/FriendZone/bin/FriendZone.dll.config
+++ b/FriendZone/FriendZone/bin/FriendZone.dll.config
@@ -52,4 +52,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="FriendZoneDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FriendZone;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
