--- a/FriendZone/FriendZoneData/FriendZoneData.csproj
+++ b/FriendZone/FriendZoneData/FriendZoneData.csproj
@@ -51,10 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Student.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\FriendZoneDBContext.cs" />
+    <Compile Include="Services\IStudentData.cs" />
     <Compile Include="Services\IUserData.cs" />
+    <Compile Include="Services\SqlStudentData.cs" />
     <Compile Include="Services\SqlUserData.cs" />
   </ItemGroup>
   <ItemGroup>
