--- a/FriendZone/FriendZoneData/FriendZoneData.csproj
+++ b/FriendZone/FriendZoneData/FriendZoneData.csproj
@@ -60,9 +60,11 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\FriendZoneDBContext.cs" />
+    <Compile Include="Services\InterfaceData\ILikeData.cs" />
     <Compile Include="Services\InterfaceData\IPostData.cs" />
     <Compile Include="Services\InterfaceData\ICommentaire.cs" />
     <Compile Include="Services\InterfaceData\IUserData.cs" />
+    <Compile Include="Services\SqlData\LikeData.cs" />
     <Compile Include="Services\SqlData\PostData.cs" />
     <Compile Include="Services\SqlData\CommentaireData.cs" />
     <Compile Include="Services\SqlData\UserData.cs" />
