add Auth controller

--- a/FriendZone/FriendZone/FriendZoneApi.csproj
+++ b/FriendZone/FriendZone/FriendZoneApi.csproj
@@ -114,6 +114,7 @@
   <ItemGroup>
     <Compile Include="App_Start\ApiOwinServer.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\LikeController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\CommentaireController.cs" />
@@ -159,6 +160,8 @@
           <DevelopmentServerPort>50764</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:50764/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://127.0.0.1:50764/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
