--- a/FriendZone/FriendZoneWeb/Web.config
+++ b/FriendZone/FriendZoneWeb/Web.config
@@ -13,7 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ApiBaseUrl" value="http://localhost:50764/api/" />
+    <add key="ApiBaseUrl" value="http://localhost:50764/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -62,4 +62,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
