--- a/FriendZone/FriendZoneWeb/Web.config
+++ b/FriendZone/FriendZoneWeb/Web.config
@@ -18,6 +18,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <sessionState timeout="120"  />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
