--- a/FriendZone/FriendZoneWeb/FriendZoneWeb.csproj
+++ b/FriendZone/FriendZoneWeb/FriendZoneWeb.csproj
@@ -609,6 +609,7 @@
     <Content Include="Views\Post\_ViewStart.cshtml" />
     <Content Include="Views\Post\Index.cshtml" />
     <Content Include="Views\Post\Create.cshtml" />
+    <Content Include="Views\Post\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
