--- a/FriendZone/FriendZoneWeb/FriendZoneWeb.csproj
+++ b/FriendZone/FriendZoneWeb/FriendZoneWeb.csproj
@@ -617,6 +617,7 @@
     <Content Include="Views\Shared\NotFound.cshtml" />
     <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\User\Delete.cshtml" />
+    <Content Include="Views\User\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
