--- a/FriendZone/FriendZoneData/FriendZoneData.csproj
+++ b/FriendZone/FriendZoneData/FriendZoneData.csproj
@@ -54,6 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\202004241659390_Initial.cs" />
+    <Compile Include="Migrations\202004241659390_Initial.designer.cs">
+      <DependentUpon>202004241659390_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Like.cs" />
     <Compile Include="Model\Commentaire.cs" />
     <Compile Include="Model\Post.cs" />
@@ -73,7 +78,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202004241659390_Initial.resx">
+      <DependentUpon>202004241659390_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
